# animerec

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  app.k8s.yaml  app.py  main.py  pyproject.toml  settings.py
.flox/: env.json
.flox/env/: manifest.toml
chains/: ingest.py  recommend.py  vectorstore.py
