[project]
name = "animerec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.52.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ipykernel>=7.1.0",
    "ruff>=0.14.7",
    "watchdog>=6.0.0",
]

[tool.basedpyright]
allowedUntypedLibraries = [
    "pandas"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff.lint]
extend-select = ["I"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
